--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.2",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@material-tailwind/react": "^0.3.4",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,6 +21,7 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-web-share": "^2.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
